Fix margin collapse

--- a/main.css
+++ b/main.css
@@ -1,13 +1,23 @@
 :scope {
     display: flex;
-    flex-flow: column nowrap;
     font-family: system-ui; }
 :scope {
     --accent-color: #ff6a00;
     --accent-background: #ff6a004c; }
+@media(max-width: 600px) {
+:scope {
+    flex-flow: column nowrap; }
+:scope :not(:first-child) {
+    margin-block-start: 0.5rem; }
+:scope :not(:last-child) {
+    margin-block-end: 0.5rem; } }
 @media(min-width: 600px) {
 :scope {
-    flex-flow: row nowrap; } }
+    flex-flow: row nowrap; }
+:scope :not(:first-child) {
+    margin-inline-start: 0.5rem; }
+:scope :not(:last-child) {
+    margin-inline-end: 0.5rem; } }
 aside {
     flex: 0 0 auto;
     margin: 1em; }
